tests/sumo/errors/too_many_teleports/output.sumo
Loading net-file from 'net.net.xml' ... done (3ms).
Loading done.
Simulation version v1_5_0+0662-a598ecae47 started with time: 0.00
Simulation ended at time: 2610.00
Reason: Too many teleports.
Performance: 
 Duration: 897ms
 Real time factor: 2909.7
 UPS: 338248.606466
Vehicles: 
 Inserted: 206 (Loaded: 251)
 Running: 204
 Waiting: 45
Teleports: 6 (Jam: 1, Yield: 3, Wrong Lane: 2)

